--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,9 +11,10 @@
     <nav class="navbar">
         <div class="container">
             <div class="navbar-brand">
-                <a href="{{ url_for('main.index') if current_user.is_authenticated else url_for('auth.login') }}">
-                    Sistema Template
-                </a>
+                <!-- <a href="{{ url_for('main.index') if current_user.is_authenticated else url_for('auth.login') }}">
+                    I.T
+                </a> -->
+                <img src="../static/images/image.png" alt="" style="width: 50px; height: 50px;">
             </div>
             <div class="navbar-menu">
                 {% if current_user.is_authenticated %}
