--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -43,7 +43,7 @@ body {
 .navbar {
     background-color: white;
     box-shadow: var(--shadow);
-    padding: 1rem 0;
+    /* padding: 1rem 0; */
     position: sticky;
     top: 0;
     z-index: 1000;
@@ -541,6 +541,12 @@ body {
     text-align: center;
     padding: 2rem 0;
     margin-top: auto;
+}
+
+/* Logo */
+.logo {
+    width: 75px;
+    height: 75px;
 }
 
 /* Responsive */
