--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,11 @@
                 <!-- <a href="{{ url_for('main.index') if current_user.is_authenticated else url_for('auth.login') }}">
                     I.T
                 </a> -->
-                <img src="../static/images/image.png" alt="" style="width: 50px; height: 50px;">
+                <!-- <img src="../static/images/image.png" alt="" style="width: 50px; height: 50px;"> -->
+                 
+                <a href="{{ url_for('main.index') }}">
+                    <img src="../static/images/logo-light.png" alt="logo" class="logo">
+                </a>
             </div>
             <div class="navbar-menu">
                 {% if current_user.is_authenticated %}
