--- a/tests/styles.css
+++ b/tests/styles.css
@@ -4,3 +4,21 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+table {
+    width: 500px;
+    border-collapse: collapse;
+}
+
+.Cabeçalho {
+    background-color: rgb(194, 194, 194);
+}
+
+.treino {
+    
+
+}
+
+.Negrito {
+    font-weight: bold;
+}
