--- a/tests/styles.css
+++ b/tests/styles.css
@@ -4,3 +4,15 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+tr{
+    
+    border: 2px solid black;
+}
+td{
+    position: relative;
+    border: 2px solid black;
+    text-align: center;
+}
+table{
+    border: 2px solid black;
+}
