Adicionado/Modificado: Adição de mais componentes na landing page e modificação dos cards que já existiam

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -53,7 +53,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 Sistema Template - IENH Dev Sistemas II</p>
+            <p>&copy; 2025 - I.T - Intelligent Training</p>
         </div>
     </footer>
 
