--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -21,7 +21,7 @@
     --shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 
-body {
+html, body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
     line-height: 1.6;
     color: var(--text-color);
@@ -30,6 +30,7 @@ body {
     display: flex;
     flex-direction: column;
 }
+
 
 /* Container */
 .container {
@@ -269,7 +270,7 @@ body {
 }
 
 .btn-secondary {
-    background-color: var(--secondary-color);
+    background-color: var(--dark-color);
     color: white;
 }
 
@@ -301,7 +302,7 @@ body {
 /* Hero Section */
 .hero-section {
     text-align: center;
-    padding: 3rem 0;
+    /* padding: 3rem 0; */
 }
 
 .hero-title {
@@ -309,6 +310,7 @@ body {
     font-weight: 700;
     color: var(--dark-color);
     margin-bottom: 1rem;
+    line-height: normal;
 }
 
 .hero-subtitle {
@@ -340,6 +342,13 @@ body {
 
 .card-icon {
     font-size: 3rem;
+    margin-bottom: 1rem;
+}
+
+.card-image {
+    width: 150px;
+    height: 150px;
+    border-radius: 10px;
     margin-bottom: 1rem;
 }
 
@@ -549,11 +558,40 @@ body {
     height: 75px;
 }
 
+/* Seção "Sobre" */
+.sobre {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    margin: 3rem 0;
+}
+
+.sobre img {
+    width: 400px;
+    height: 400px;
+    border-radius: 10px;
+}
+
+.sobre p {
+    text-align: justify;
+}
+
+/* Usuários Ativos */
+.usuarios-ativos {
+    margin-top: 3rem;
+}
+
+/* Feedbacks Usuários */
+.feedbacks {
+    margin-top: 3rem;
+}
+
 /* Responsive */
 @media (max-width: 768px) {
     .navbar .container {
         flex-direction: column;
-        gap: 1rem;
+        /* gap: 1rem; */
+        margin-bottom: 1rem;
     }
 
     .navbar-menu {
