Removido: Usuário conseguir criar próprio login

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,7 +28,7 @@
                     <a href="{{ url_for('auth.logout') }}" class="btn-logout">Sair</a>
                 {% else %}
                     <a href="{{ url_for('auth.login') }}">Login</a>
-                    <a href="{{ url_for('auth.register') }}">Cadastrar</a>
+                    <!-- <a href="{{ url_for('auth.register') }}">Cadastrar</a> -->
                 {% endif %}
             </div>
         </div>
