--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -35,7 +35,7 @@
                     >
                 </div>
 
-                <div class="form-group form-check">
+                <!-- <div class="form-group form-check">
                     <input 
                         type="checkbox" 
                         id="remember" 
@@ -43,16 +43,16 @@
                         class="form-check-input"
                     >
                     <label for="remember" class="form-check-label">Lembrar-me</label>
-                </div>
+                </div> -->
 
                 <button type="submit" class="btn btn-primary btn-block">
                     Entrar
                 </button>
             </form>
 
-            <div class="auth-footer">
+            <!-- <div class="auth-footer">
                 <p>Não tem uma conta? <a href="{{ url_for('auth.register') }}">Cadastre-se</a></p>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
