--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,7 +24,8 @@
                 {% if current_user.is_authenticated %}
                     <a href="{{ url_for('main.index') }}">Início</a>
                     <a href="{{ url_for('main.dashboard') }}">Dashboard</a>
-                    <span class="navbar-user">Olá, {{ current_user.username }}!</span>
+                    <!-- <span class="navbar-user">Olá, {{ current_user.username }}!</span> -->
+                    <!-- <a href="{{ url_for('auth.logout') }}" class="btn-logout">Sair</a> -->
                     <a href="{{ url_for('auth.logout') }}" class="btn-logout">Sair</a>
                 {% else %}
                     <a href="{{ url_for('auth.login') }}">Login</a>
