Adicionado: Imgens dos cards da landing page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,7 +31,7 @@
     <div class="cards-grid">
         <div class="card">
             <!-- <div class="card-icon">📊</div> -->
-            <img class="card-image" src="https://placehold.co/150" alt="">
+            <img class="card-image" src="../static/images/b2c78f6b-5e0b-4c4f-b9d4-ab848d47f02f.png" alt="">
             <h3 class="card-title">Fichas de Treinos Personalizadas</h3>
             <p class="card-text">Fichas de treinos personalizadas, com vídeos demonstrativos para execução dos exercícios e IA que auxiliaria no progresso.</p>
             <!-- <a href="{{ url_for('main.dashboard') }}" class="btn btn-secondary">Saber Mais</a> -->
@@ -39,7 +39,7 @@
         </div>
 
         <div class="card">
-            <img class="card-image" src="https://placehold.co/150" alt="">
+            <img class="card-image" src="../static/images/c1b492a2-641b-4c5d-a6ed-c516e8fcd833.png" alt="">
             <!-- <div class="card-icon">👤</div> -->
             <h3 class="card-title">Vídeos Demonstrativos dos Exercícios</h3>
             <p class="card-text">Vídeos demonstrativos para auxiliar nos exercícios, para evitar lesões e melhorar a execução.</p>
@@ -47,7 +47,7 @@
         </div>
 
         <div class="card">
-            <img class="card-image" src="https://placehold.co/150" alt="">
+            <img class="card-image" src="../static/images/5a6d8722-fed4-41c5-b792-fbf6c2625183.png" alt="">
             <!-- <div class="card-icon">⚙️</div> -->
             <h3 class="card-title">Inteligência Artificial Auxiliar</h3>
             <p class="card-text">O uso da inteligência artificial irá auxiliar, sugerir exercícios, recomendar ajustes de treino baseados no histórico e alertar sobre sobrecarga de peso.</p>
